--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
             <div class="flex flex-col-reverse items-center w-full flex-wrap md:flex-row md:justify-between md:items-center">
 
                 <div class="flex mx-2 mb-4 md:mb-0">
-                    <a target="_blank" href="https://www.instagram.com/mamchur_victor/" class="flex mr-4 w-9 h-9"><img src="img/ig.svg" alt="Instagram"></a>
-                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100022909552829" class="flex mr-4 w-9 h-9"><img src="img/fb.svg" alt="Facebook"></a>
+                    <a target="_blank" href="" class="flex mr-4 w-9 h-9"><img src="img/ig.svg" alt="Instagram"></a>
+                    <a target="_blank" href="" class="flex mr-4 w-9 h-9"><img src="img/fb.svg" alt="Facebook"></a>
                 </div>
 
                 <div class="flex mx-2 sm:mr-5 pb-5 md:pb-0 items-center sm:justify-center">
