--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     text-white
     ">
     <div id="not-text" class="flex py-6 px-12 rounded-lg cursor-pointer bg-gray-800">
-            Ошибка или успех
+           Помилка або успіх
         </div>
     </div>
 
