--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                             </div>
 
                             <div class="mb-4 flex flex-grow text-white self-center sm:self-start text-sm font-theme md:text-md lg:text-lg">
-                                <button type="submit" class="transition-all hover:bg-white hover:text-black text-sm sm:text-md rounded-full border-2 border-white px-5 py-1 ">Відправити</button>
-                                <a href="mailto:tkachyk442@gmail.com">
+                                <button type="submit" class="transition-all hover:bg-white hover:text-black text-sm sm:text-md rounded-full border-2 border-white px-5 py-1 "<a href="mailto:tkachyk442@gmail.com"><Відправити</button>
+                                
                             </div>
 
                         </form>
